--- a/_config.yml
+++ b/_config.yml
@@ -38,3 +38,5 @@ social:
   github: https://github.com/allan02
   twitter: https://twitter.com
   linkedin: https://ba.linkedin.com
+  
+disqus_shortname: allan02-github-io
