--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title:          Jaehyeon
 description:    "Jaehyeon's Blog"
-url:            https://github.com/inelaah/rain
+url:            https://github.com/allan02
 
 # Author
 author:
@@ -39,4 +39,3 @@ social:
   twitter: https://twitter.com
   linkedin: https://ba.linkedin.com
   
-disqus_shortname: allan02-github-io
